@@ -2,6 +2,9 @@ HEAD
 	+ Bugfix: trim URL string as DB stores it as a varchar(1024) (Log)
 	+ Disabled ban URL regexes
 	+ Added filter profile per object
+	+ Bugfix, breadcrumbs triggered old problem with parent method in
+	DomainFilterCategories model, so we enable again the old
+	workaround to avoid this error
 1.3.14
 	+ Bugfix: in restartService we assure that all files are in place
 	before restarting the daemons
